--- a/gitlab_modify_ldap_server.yml
+++ b/gitlab_modify_ldap_server.yml
@@ -8,8 +8,8 @@
    - name: replace text file
      replace:
        dest: /tmp/test.txt
-       regexp: 'aaa'
-       replace: 'bbb'
+       regexp: 'bbb'
+       replace: 'aaa.bbb.ccc.ddd'
        backup: yes
         
 
