--- a/gitlab_modify_ldap_server.yml
+++ b/gitlab_modify_ldap_server.yml
@@ -7,9 +7,9 @@
   tasks:
    - name: replace text file
      replace:
-       dest: /tmp/test.txt
-       regexp: 'bbb'
-       replace: 'aaa.bbb.ccc.ddd'
+       dest: /tmp/gitab.rb
+       regexp: '100.102.145.79'
+       replace: '100.102.145.80'
        backup: yes
         
 
